--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="hero container">
         <img
           class="hero__image"
-          src="images/__image.jpg"
+          src="images/image.png"
           alt="Paisaje costero panorámico"
           loading="lazy"
         />
