Corrige carpeta vendor

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania. Conoce los lugares de origen de tus colegas."
-    />
-    <title>De patria a patria</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="vendor/normalize.css" />
-    <link rel="stylesheet" href="pages/index.css" />
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta
+        name="description"
+        content="Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania. Conoce los lugares de origen de tus colegas."
+      />
+      <title>De patria a patria</title>
+      <link rel="icon" type="image/png" href="favicon.png" />
+
+      <!-- primero normalize, luego fonts y al final tus estilos -->
+      <link rel="stylesheet" href="vendor/normalize.css" />
+      <link rel="stylesheet" href="vendor/fonts.css" />
+      <link rel="stylesheet" href="pages/index.css" />
+    </head>
   </head>
   <body class="page">
     <header class="header container" id="top">
