Agrega nombre de autor, descripción y keywords

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+      <meta name="author" content="Alex Bricio" />
       <meta
         name="description"
         content="Un viaje épico de Kentucky a Burundi pasando por Gales y Ucrania. Conoce los lugares de origen de tus colegas."
       />
+      <meta
+        name="keywords"
+        content="viaje, Kentucky, Burundi, Gales, Ucrania, TripleTen, patria"
+      />
+
       <title>De patria a patria</title>
       <link rel="icon" type="image/png" href="favicon.png" />
 
