Agrega siguiente etapa

--- a/index.html
+++ b/index.html
@@ -75,6 +75,246 @@
             </p>
           </div>
         </section>
+
+        <section class="photo-grid">
+          <div class="photo-grid__list">
+            <img
+              src="images/photo1.png"
+              alt="Paisaje 1"
+              class="photo-grid__item"
+            />
+            <img
+              src="images/photo2.png"
+              alt="Paisaje 2"
+              class="photo-grid__item"
+            />
+            <img
+              src="images/photo3.png"
+              alt="Paisaje 3"
+              class="photo-grid__item"
+            />
+            <img
+              src="images/photo4.png"
+              alt="Paisaje 4"
+              class="photo-grid__item"
+            />
+            <img
+              src="images/photo5.png"
+              alt="Paisaje 5"
+              class="photo-grid__item"
+            />
+            <img
+              src="images/photo6.png"
+              alt="Paisaje 6"
+              class="photo-grid__item"
+            />
+            <img
+              src="images/photo7.png"
+              alt="Paisaje 7"
+              class="photo-grid__item"
+            />
+            <img
+              src="images/photo8.png"
+              alt="Paisaje 8"
+              class="photo-grid__item"
+            />
+          </div>
+        </section>
+
+        <section class="places container">
+          <article class="place">
+            <h2 class="place__title">
+              Cricieth, <br class="title-break" />Gales
+            </h2>
+
+            <div class="place__artists">
+              <h3 class="place__artists-heading">Artistas</h3>
+              <p class="place__artist">Steffan Warren, editor jefe</p>
+              <p class="place__artist">
+                Kseniya Glagoleva, gerente de proyectos
+              </p>
+            </div>
+
+            <div class="place__media">
+              <img
+                src="images/cricieth.png"
+                alt="Castillo de Cricieth"
+                class="place__image"
+              />
+              <a
+                href="https://es.wikipedia.org/wiki/Token_no_fungible"
+                class="place__button"
+              >
+                Compra esta obra como NFT
+              </a>
+            </div>
+
+            <div class="place__texts">
+              <p class="place__text">
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada Perla de Gales en las costas de
+                Snowdonia, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+              <p class="place__text">
+                A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </p>
+            </div>
+          </article>
+
+          <article class="place">
+            <h2 class="place__title">
+              Berea, EE.<br class="title-break" />UU.
+            </h2>
+
+            <div class="place__artists">
+              <h3 class="place__artists-heading">Artista</h3>
+              <p class="place__artist">Travis Turner, autor y editor</p>
+            </div>
+
+            <div class="place__media">
+              <img
+                src="images/berea.png"
+                alt="Paisaje de Berea"
+                class="place__image"
+              />
+              <a
+                href="https://es.wikipedia.org/wiki/Token_no_fungible"
+                class="place__button"
+              >
+                Compra esta obra como NFT
+              </a>
+            </div>
+
+            <div class="place__texts">
+              <p class="place__text">
+                Berea es una pequeña ciudad ubicada en la parte central de
+                Kentucky. La ciudad está rodeada por hermosos bosques y campos.
+                Es conocida como la capital de la artesanía del estado, y sus
+                visitantes hallarán infinitas posibilidades para ir de compras:
+                tiendas de joyas, velas y artículos de madera artesanales;
+                galerías, talleres de vidrio y más. La ciudad celebra un
+                festival anual que rinde tributo al "spoonbread", un platillo
+                local hecho de pan de maíz y que se sirve con una cuchara de
+                madera..
+              </p>
+              <p class="place__text">
+                Aunque, probablemente es mejor conocida por su universidad. El
+                Berea College fue fundado en 1855 y fue la primera universidad
+                sureña integrada racialmente, así como la primera en ser
+                coeducacional. Algo que en cierta manera la hace única, es que
+                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </p>
+            </div>
+          </article>
+
+          <article class="place">
+            <h2 class="place__title">Muramvya, Burundi</h2>
+
+            <div class="place__artists">
+              <h3 class="place__artists-heading">Artista</h3>
+              <p class="place__artist">Grevisse Kenguruka, editor técnico</p>
+            </div>
+
+            <div class="place__media">
+              <img
+                src="images/muramvya.png"
+                alt="Montañas de Muramvya"
+                class="place__image"
+              />
+              <a
+                href="https://es.wikipedia.org/wiki/Token_no_fungible"
+                class="place__button"
+              >
+                Compra esta obra como NFT
+              </a>
+            </div>
+
+            <div class="place__texts">
+              <p class="place__text">
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p class="place__text">
+                Su clima es más bien frío durante la noche, pero durante el día,
+                podrías pensar que estás en el paraíso. A sus 2,665 metros
+                (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
+                lugares más fríos de la provincia. Pero es justo esa brisa
+                fresca la que da pie a una de las más grandes plantaciones de té
+                y café del país, y que representa la mayoría de las
+                exportaciones de Burundi.
+              </p>
+              <p class="place__text">
+                El Parque nacional de Kibira, una de las mayores reservas de
+                vida silvestre para los simios, ocupa parte de cuatro
+                provincias, incluyendo Muramvya. Este parque nacional se
+                encuentra en las cúspides de las hermosas montañas de la
+                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
+                metros. Está lleno de hermosa vegetación, y es una fuente para
+                los diversos ríos y arroyos que proporcionan agua alrededor del
+                país.
+              </p>
+            </div>
+          </article>
+
+          <article class="place">
+            <h2 class="place__title">Querétaro, México</h2>
+
+            <div class="place__artists">
+              <h3 class="place__artists-heading">Artista</h3>
+              <p class="place__artist">Alex Bricio, programador</p>
+            </div>
+
+            <div class="place__media">
+              <img
+                src="images/queretaro.jpg"
+                alt="Foto de Querétaro"
+                class="place__image"
+              />
+              <a
+                href="https://es.wikipedia.org/wiki/Token_no_fungible"
+                class="place__button"
+              >
+                Compra esta obra como NFT
+              </a>
+            </div>
+
+            <div class="place__texts">
+              <p class="place__text">
+                Santiago de Querétaro, en el corazón de México, es una ciudad
+                donde conviven la historia colonial y la modernidad. Su
+                emblemático acueducto del siglo XVIII, con 74 arcos que se
+                elevan sobre la ciudad, es uno de los símbolos más reconocidos.
+                El centro histórico, declarado Patrimonio de la Humanidad por la
+                UNESCO, está lleno de templos, plazas y casonas que reflejan la
+                riqueza cultural de la región.
+              </p>
+              <p class="place__text">
+                Al mismo tiempo, Querétaro se ha convertido en uno de los polos
+                industriales y tecnológicos más importantes del país. Su
+                crecimiento económico ha atraído a profesionales de todo el
+                mundo, sin que la ciudad pierda su identidad. Las tradiciones
+                como la celebración de la Cruz de los Milagros y su cercanía a
+                la Sierra Gorda hacen de Querétaro un lugar único, donde la
+                modernidad y la cultura mexicana se entrelazan de manera
+                armoniosa.
+              </p>
+            </div>
+          </article>
+        </section>
       </main>
 
       <footer class="footer container">
