--- a/index.html
+++ b/index.html
@@ -127,26 +127,25 @@
               Cricieth, <br class="title-break" />Gales
             </h2>
 
+            <img
+              src="images/cricieth.png"
+              alt="Castillo de Cricieth"
+              class="place__image"
+            />
+
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="place__button"
+            >
+              Compra esta obra como NFT
+            </a>
+
             <div class="place__artists">
               <h3 class="place__artists-heading">Artistas</h3>
               <p class="place__artist">Steffan Warren, editor jefe</p>
               <p class="place__artist">
                 Kseniya Glagoleva, gerente de proyectos
               </p>
-            </div>
-
-            <div class="place__media">
-              <img
-                src="images/cricieth.png"
-                alt="Castillo de Cricieth"
-                class="place__image"
-              />
-              <a
-                href="https://es.wikipedia.org/wiki/Token_no_fungible"
-                class="place__button"
-              >
-                Compra esta obra como NFT
-              </a>
             </div>
 
             <div class="place__texts">
@@ -156,9 +155,7 @@
                 construido por Llewelyn el Grande en el S. XIII. 800 años
                 después, la autodenominada Perla de Gales en las costas de
                 Snowdonia, se ha convertido en un popular destino turístico
-                durante los meses de verano.
-              </p>
-              <p class="place__text">
+                durante los meses de verano. <br />
                 A pocos pasos de camino al castillo, puedes disfrutar de los
                 mejores helados del mundo en Cadwalader's, cuyo ingrediente
                 secreto se rumorea que son algas marinas de la localidad. Otra
@@ -176,23 +173,22 @@
               Berea, EE.<br class="title-break" />UU.
             </h2>
 
+            <img
+              src="images/berea.png"
+              alt="Paisaje de Berea"
+              class="place__image"
+            />
+
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="place__button"
+            >
+              Compra esta obra como NFT
+            </a>
+
             <div class="place__artists">
               <h3 class="place__artists-heading">Artista</h3>
               <p class="place__artist">Travis Turner, autor y editor</p>
-            </div>
-
-            <div class="place__media">
-              <img
-                src="images/berea.png"
-                alt="Paisaje de Berea"
-                class="place__image"
-              />
-              <a
-                href="https://es.wikipedia.org/wiki/Token_no_fungible"
-                class="place__button"
-              >
-                Compra esta obra como NFT
-              </a>
             </div>
 
             <div class="place__texts">
@@ -205,9 +201,8 @@
                 galerías, talleres de vidrio y más. La ciudad celebra un
                 festival anual que rinde tributo al "spoonbread", un platillo
                 local hecho de pan de maíz y que se sirve con una cuchara de
-                madera..
-              </p>
-              <p class="place__text">
+                madera. <br />
+
                 Aunque, probablemente es mejor conocida por su universidad. El
                 Berea College fue fundado en 1855 y fue la primera universidad
                 sureña integrada racialmente, así como la primera en ser
@@ -220,23 +215,22 @@
           <article class="place">
             <h2 class="place__title">Muramvya, Burundi</h2>
 
+            <img
+              src="images/muramvya.png"
+              alt="Montañas de Muramvya"
+              class="place__image"
+            />
+
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="place__button"
+            >
+              Compra esta obra como NFT
+            </a>
+
             <div class="place__artists">
               <h3 class="place__artists-heading">Artista</h3>
               <p class="place__artist">Grevisse Kenguruka, editor técnico</p>
-            </div>
-
-            <div class="place__media">
-              <img
-                src="images/muramvya.png"
-                alt="Montañas de Muramvya"
-                class="place__image"
-              />
-              <a
-                href="https://es.wikipedia.org/wiki/Token_no_fungible"
-                class="place__button"
-              >
-                Compra esta obra como NFT
-              </a>
             </div>
 
             <div class="place__texts">
@@ -247,8 +241,7 @@
                 de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
                 centro de Burundi, entre las capitales política y económica del
                 país.
-              </p>
-              <p class="place__text">
+                <br />
                 Su clima es más bien frío durante la noche, pero durante el día,
                 podrías pensar que estás en el paraíso. A sus 2,665 metros
                 (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
@@ -257,39 +250,28 @@
                 y café del país, y que representa la mayoría de las
                 exportaciones de Burundi.
               </p>
-              <p class="place__text">
-                El Parque nacional de Kibira, una de las mayores reservas de
-                vida silvestre para los simios, ocupa parte de cuatro
-                provincias, incluyendo Muramvya. Este parque nacional se
-                encuentra en las cúspides de las hermosas montañas de la
-                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
-                metros. Está lleno de hermosa vegetación, y es una fuente para
-                los diversos ríos y arroyos que proporcionan agua alrededor del
-                país.
-              </p>
             </div>
           </article>
 
           <article class="place">
             <h2 class="place__title">Querétaro, México</h2>
 
+            <img
+              src="images/queretaro.jpg"
+              alt="Foto de Querétaro"
+              class="place__image"
+            />
+
+            <a
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              class="place__button"
+            >
+              Compra esta obra como NFT
+            </a>
+
             <div class="place__artists">
               <h3 class="place__artists-heading">Artista</h3>
               <p class="place__artist">Alex Bricio, programador</p>
-            </div>
-
-            <div class="place__media">
-              <img
-                src="images/queretaro.jpg"
-                alt="Foto de Querétaro"
-                class="place__image"
-              />
-              <a
-                href="https://es.wikipedia.org/wiki/Token_no_fungible"
-                class="place__button"
-              >
-                Compra esta obra como NFT
-              </a>
             </div>
 
             <div class="place__texts">
@@ -301,16 +283,6 @@
                 El centro histórico, declarado Patrimonio de la Humanidad por la
                 UNESCO, está lleno de templos, plazas y casonas que reflejan la
                 riqueza cultural de la región.
-              </p>
-              <p class="place__text">
-                Al mismo tiempo, Querétaro se ha convertido en uno de los polos
-                industriales y tecnológicos más importantes del país. Su
-                crecimiento económico ha atraído a profesionales de todo el
-                mundo, sin que la ciudad pierda su identidad. Las tradiciones
-                como la celebración de la Cruz de los Milagros y su cercanía a
-                la Sierra Gorda hacen de Querétaro un lugar único, donde la
-                modernidad y la cultura mexicana se entrelazan de manera
-                armoniosa.
               </p>
             </div>
           </article>
