--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
 
         <section class="places container">
           <article class="place">
-            <h2 class="place__title">
-              Cricieth, <br class="title-break" />Gales
-            </h2>
+            <h2 class="place__title">Cricieth, Gales</h2>
 
             <img
               src="images/cricieth.png"
@@ -169,9 +167,7 @@
           </article>
 
           <article class="place">
-            <h2 class="place__title">
-              Berea, EE.<br class="title-break" />UU.
-            </h2>
+            <h2 class="place__title">Berea, EE.UU.</h2>
 
             <img
               src="images/berea.png"
