--- a/index.html
+++ b/index.html
@@ -153,15 +153,14 @@
                 construido por Llewelyn el Grande en el S. XIII. 800 años
                 después, la autodenominada Perla de Gales en las costas de
                 Snowdonia, se ha convertido en un popular destino turístico
-                durante los meses de verano. <br />
-                A pocos pasos de camino al castillo, puedes disfrutar de los
-                mejores helados del mundo en Cadwalader's, cuyo ingrediente
-                secreto se rumorea que son algas marinas de la localidad. Otra
-                cosa por la que es famosa Cricieth es por haber ganado el premio
-                *Gales en flor* durante cinco años seguidos por sus
-                espectaculares muestras florales alrededor de la ciudad. También
-                vio nacer a David Lloyd George, el único galés que ha sido
-                Primer Ministro del Reino Unido.
+                durante los meses de verano. A pocos pasos de camino al
+                castillo, puedes disfrutar de los mejores helados del mundo en
+                Cadwalader's, cuyo ingrediente secreto se rumorea que son algas
+                marinas de la localidad. Otra cosa por la que es famosa Cricieth
+                es por haber ganado el premio *Gales en flor* durante cinco años
+                seguidos por sus espectaculares muestras florales alrededor de
+                la ciudad. También vio nacer a David Lloyd George, el único
+                galés que ha sido Primer Ministro del Reino Unido.
               </p>
             </div>
           </article>
@@ -197,13 +196,12 @@
                 galerías, talleres de vidrio y más. La ciudad celebra un
                 festival anual que rinde tributo al "spoonbread", un platillo
                 local hecho de pan de maíz y que se sirve con una cuchara de
-                madera. <br />
-
-                Aunque, probablemente es mejor conocida por su universidad. El
-                Berea College fue fundado en 1855 y fue la primera universidad
-                sureña integrada racialmente, así como la primera en ser
-                coeducacional. Algo que en cierta manera la hace única, es que
-                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+                madera. Aunque, probablemente es mejor conocida por su
+                universidad. El Berea College fue fundado en 1855 y fue la
+                primera universidad sureña integrada racialmente, así como la
+                primera en ser coeducacional. Algo que en cierta manera la hace
+                única, es que no cobra colegiatura: cada estudiante recibe una
+                beca del 100%.
               </p>
             </div>
           </article>
@@ -236,14 +234,12 @@
                 su paisaje cultural y natural, se añadió a la Lista provisional
                 de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
                 centro de Burundi, entre las capitales política y económica del
-                país.
-                <br />
-                Su clima es más bien frío durante la noche, pero durante el día,
-                podrías pensar que estás en el paraíso. A sus 2,665 metros
-                (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
-                lugares más fríos de la provincia. Pero es justo esa brisa
-                fresca la que da pie a una de las más grandes plantaciones de té
-                y café del país, y que representa la mayoría de las
+                país. Su clima es más bien frío durante la noche, pero durante
+                el día, podrías pensar que estás en el paraíso. A sus 2,665
+                metros (8,743 ft) sobre el nivel del mar, el Monte Teza es uno
+                de los lugares más fríos de la provincia. Pero es justo esa
+                brisa fresca la que da pie a una de las más grandes plantaciones
+                de té y café del país, y que representa la mayoría de las
                 exportaciones de Burundi.
               </p>
             </div>
